--- a/src/assets/css/root.css
+++ b/src/assets/css/root.css
@@ -3,6 +3,30 @@
 @tailwind utilities;
 
 :root {
-  --primary: #FFFFFF;
-  --secondary: #FFFFFF;
+  --primary: #3548a5;
+  --secondary: #00e562;
+}
+
+.color-primary {
+  color: var(--primary);
+}
+
+.color-secondary {
+  color: var(--secondary);
+}
+
+html,
+body {
+  height: 100vh;
+  width: 100%;
+  position: relative;
+  z-index: 1;
+  background: #101e30;
+  color: #ffffff;
+}
+
+div#root {
+  height: 100%;
+  width: 100%;
+  position: relative;
 }
